--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   },
   "homepage": "https://github.com/adityapant1286/TypeScript-practice#readme",
   "dependencies": {
-    "lodash": "^4.17.11"
+    "lodash": ">=4.17.11"
   },
   "devDependencies": {
     "@types/lodash": "^4.14.110"
